--- a/extras-examples/pom.xml
+++ b/extras-examples/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>CURRENT-SNAPSHOT</version>
+        <version>1.0.0-beta4</version>
     </parent>
 
     <artifactId>glimpse-extras-examples</artifactId>
@@ -14,37 +14,37 @@
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-core</artifactId>
-            <version>CURRENT-SNAPSHOT</version>
+            <version>1.0.0-beta4</version>
         </dependency>
 
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-core-examples</artifactId>
-            <version>CURRENT-SNAPSHOT</version>
+            <version>1.0.0-beta4</version>
         </dependency>
 
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-extras-swt</artifactId>
-            <version>CURRENT-SNAPSHOT</version>
+            <version>1.0.0-beta4</version>
         </dependency>
 
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-extras-dspl</artifactId>
-            <version>CURRENT-SNAPSHOT</version>
+            <version>1.0.0-beta4</version>
         </dependency>
 
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-extras-spacenav</artifactId>
-            <version>CURRENT-SNAPSHOT</version>
+            <version>1.0.0-beta4</version>
         </dependency>
 
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-extras-charts</artifactId>
-            <version>CURRENT-SNAPSHOT</version>
+            <version>1.0.0-beta4</version>
         </dependency>
 
     </dependencies>
