updated license headers for new texture atlas files. added some javadoc comments to examples

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
                         <exclude>**/GenericSorting.java</exclude>
                         <exclude>**/AttributedTextRenderer.java</exclude>
                         <exclude>**/MD5Checksum.java</exclude>
+                        <exclude>**/TextureAtlas.java</exclude>
                     </excludes>
                     <useDefaultExcludes>true</useDefaultExcludes>
                     <useDefaultMapping>true</useDefaultMapping>
