--- a/extras-dspl/pom.xml
+++ b/extras-dspl/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-core</artifactId>
-            <version>CURRENT-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
 
     </dependencies>
