--- a/extras-swt/pom.xml
+++ b/extras-swt/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-core</artifactId>
-            <version>CURRENT-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
 
         <dependency>
