--- a/extras-spacenav/pom.xml
+++ b/extras-spacenav/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
 
     <artifactId>glimpse-extras-spacenav</artifactId>
