--- a/assembly/assembly-webstart-examples/pom.xml
+++ b/assembly/assembly-webstart-examples/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>1.1.0</version>
+        <version>CURRENT-SNAPSHOT</version>
     </parent>
 
     <artifactId>glimpse-webstart-examples-assembly</artifactId>
