--- a/util/pom.xml
+++ b/util/pom.xml
@@ -17,6 +17,12 @@
             <version>6.4.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>12.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
