--- a/extras-examples/pom.xml
+++ b/extras-examples/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>glimpse-extras-charts</artifactId>
             <version>${parent.version}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.metsci.glimpse</groupId>
+            <artifactId>glimpse-extras-worldwind</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
 
     </dependencies>
 
