--- a/extras-worldwind/pom.xml
+++ b/extras-worldwind/pom.xml
@@ -18,16 +18,16 @@
         </dependency>
 
         <dependency>
-        	<groupId>gov.nasa</groupId>
+        	<groupId>com.metsci.ext.gov.nasa</groupId>
         	<artifactId>worldwindx</artifactId>
-        	<version>4.1.0</version>
+        	<version>1.4.0</version>
         	<type>jar</type>
         	<scope>compile</scope>
         </dependency>
         <dependency>
-        	<groupId>gov.nasa</groupId>
+        	<groupId>com.metsci.ext.gov.nasa</groupId>
         	<artifactId>worldwind</artifactId>
-        	<version>4.1.0</version>
+        	<version>1.4.0</version>
         	<type>jar</type>
         	<scope>compile</scope>
         </dependency>
