--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,23 @@
                 </executions>
             </plugin>
 
+            <!-- add the current commit SHA to the build jar -->
+            <plugin>
+                <groupId>com.github.koraktor</groupId>
+                <artifactId>mavanagaiata</artifactId>
+                <version>0.5.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>commit</goal>
+                        </goals>
+                        <configuration>
+                            <skipNoGit>true</skipNoGit>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.3.1</version>
@@ -97,6 +114,7 @@
                         </manifest>
                         <manifestEntries>
                             <Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
+                            <SCM-Revision>${mvngit.commit.id}</SCM-Revision>
                         </manifestEntries>
                     </archive>
                 </configuration>
@@ -166,6 +184,19 @@
                                         <versionRange>[2.1,)</versionRange>
                                         <goals>
                                             <goal>resolve</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <execute/>
+                                    </action>
+                                </pluginExecution>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>com.github.koraktor</groupId>
+                                        <artifactId>mavanagaiata</artifactId>
+                                        <versionRange>[0.5.0,)</versionRange>
+                                        <goals>
+                                            <goal>commit</goal>
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
