--- a/core/pom.xml
+++ b/core/pom.xml
@@ -38,7 +38,7 @@
         </dependency>
         <dependency>
         	<groupId>org.jogamp.gluegen</groupId>
-        	<artifactId>gluegen-rt</artifactId>
+        	<artifactId>gluegen-rt-main</artifactId>
         	<version>2.0-rc11</version>
         </dependency>
     </dependencies>
