--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,8 @@
         <module>core</module>
         <module>core-examples</module>
 
+        <module>docking</module>
+
         <module>extras-charts</module>
         <module>extras-dspl</module>
         <module>extras-spacenav</module>
