--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ target
 /docking/.settings
 /docking/target
 /docking/.classpath
+/docking-examples/.project
+/docking-examples/.settings
+/docking-examples/target
+/docking-examples/.classpath
 /extras-charts/target
 /extras-charts/.classpath
 /extras-charts/.project
