--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,9 +10,6 @@
     <artifactId>glimpse-core</artifactId>
 
     <dependencies>
-
-
-
         <dependency>
             <groupId>com.miglayout</groupId>
             <artifactId>miglayout-core</artifactId>
@@ -34,12 +31,13 @@
         <dependency>
         	<groupId>org.jogamp.jogl</groupId>
         	<artifactId>jogl-all-main</artifactId>
-        	<version>2.0-rc11</version>
+        	<version>2.0.2</version>
         </dependency>
+        
         <dependency>
         	<groupId>org.jogamp.gluegen</groupId>
         	<artifactId>gluegen-rt-main</artifactId>
-        	<version>2.0-rc11</version>
+        	<version>2.0.2</version>
         </dependency>
     </dependencies>
 
