Certain dependencies, like worldwind, currently don't have source jars. Don't let this cause the build to fail.

--- a/assembly/assembly-full/pom.xml
+++ b/assembly/assembly-full/pom.xml
@@ -67,6 +67,7 @@
                             <goal>unpack-dependencies</goal>
                         </goals>
                         <configuration>
+                            <failOnMissingClassifierArtifact>false</failOnMissingClassifierArtifact>
                             <includeScope>compile</includeScope>
                             <classifier>sources</classifier>
                             <outputDirectory>${project.build.directory}/sources</outputDirectory>
