--- a/core/pom.xml
+++ b/core/pom.xml
@@ -29,15 +29,15 @@
         </dependency>
 
         <dependency>
-        	<groupId>org.jogamp.jogl</groupId>
+        	<groupId>com.metsci.ext.org.jogamp.jogl</groupId>
         	<artifactId>jogl-all-main</artifactId>
-        	<version>2.1.2</version>
+        	<version>2.1.3-b1159</version>
         </dependency>
         
         <dependency>
-        	<groupId>org.jogamp.gluegen</groupId>
+        	<groupId>com.metsci.ext.org.jogamp.gluegen</groupId>
         	<artifactId>gluegen-rt-main</artifactId>
-        	<version>2.1.2</version>
+        	<version>2.1.3-b751</version>
         </dependency>
     </dependencies>
 
