--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,44 +1,45 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.metsci.glimpse</groupId>
-        <artifactId>glimpse-parent</artifactId>
-        <version>2.1.0-SNAPSHOT</version>
-    </parent>
+	<parent>
+		<groupId>com.metsci.glimpse</groupId>
+		<artifactId>glimpse-parent</artifactId>
+		<version>2.1.0-SNAPSHOT</version>
+	</parent>
 
-    <artifactId>glimpse-core</artifactId>
+	<artifactId>glimpse-core</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.miglayout</groupId>
-            <artifactId>miglayout-core</artifactId>
-            <version>4.2</version>
-        </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>com.miglayout</groupId>
+			<artifactId>miglayout-core</artifactId>
+			<version>4.2</version>
+		</dependency>
 
-        <dependency>
-            <groupId>org.antlr</groupId>
-            <artifactId>antlr-runtime</artifactId>
-            <version>3.4</version>
-        </dependency>
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr-runtime</artifactId>
+			<version>3.4</version>
+		</dependency>
 
-        <dependency>
-            <groupId>com.metsci.glimpse</groupId>
-            <artifactId>glimpse-util</artifactId>
-            <version>${parent.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>com.metsci.glimpse</groupId>
+			<artifactId>glimpse-util</artifactId>
+			<version>${parent.version}</version>
+		</dependency>
 
-        <dependency>
-        	<groupId>com.metsci.ext.org.jogamp.jogl</groupId>
-        	<artifactId>jogl-all-main</artifactId>
-        	<version>2.1.3-b1159</version>
-        </dependency>
-        
-        <dependency>
-        	<groupId>com.metsci.ext.org.jogamp.gluegen</groupId>
-        	<artifactId>gluegen-rt-main</artifactId>
-        	<version>2.1.3-b751</version>
-        </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.jogamp.jogl</groupId>
+			<artifactId>jogl-all-main</artifactId>
+			<version>2.1.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jogamp.gluegen</groupId>
+			<artifactId>gluegen-rt-main</artifactId>
+			<version>2.1.3</version>
+		</dependency>
+	</dependencies>
 
 </project>
