--- a/assembly/assembly-core/pom.xml
+++ b/assembly/assembly-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>CURRENT-SNAPSHOT</version>
+        <version>2.1.0</version>
     </parent>
 
     <artifactId>glimpse-core-assembly</artifactId>
