Set 2.1.x poms to 2.1.1-SNAPSHOT

--- a/extras-worldwind/pom.xml
+++ b/extras-worldwind/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>2.1.0</version>
+        <version>2.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>glimpse-extras-worldwind</artifactId>
@@ -21,16 +21,14 @@
         	<groupId>com.metsci.ext.gov.nasa.worldwind</groupId>
         	<artifactId>worldwindx</artifactId>
         	<version>2.0.710</version>
-        	<type>jar</type>
-        	<scope>compile</scope>
         </dependency>
+
         <dependency>
         	<groupId>com.metsci.ext.gov.nasa.worldwind</groupId>
         	<artifactId>worldwind</artifactId>
         	<version>2.0.710</version>
-        	<type>jar</type>
-        	<scope>compile</scope>
         </dependency>
+
     </dependencies>
 
 </project>
