--- a/assembly/assembly-core/pom.xml
+++ b/assembly/assembly-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>2.1.0</version>
+        <version>2.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>glimpse-core-assembly</artifactId>
@@ -41,7 +41,7 @@
                             <includeScope>compile</includeScope>
                             <classifier>sources</classifier>
                             <outputDirectory>${project.build.directory}/sources</outputDirectory>
-			    <includeGroupIds>com.metsci.glimpse</includeGroupIds>
+                            <includeGroupIds>com.metsci.glimpse</includeGroupIds>
                         </configuration>
                     </execution>
                 </executions>
