--- a/extras-dspl/pom.xml
+++ b/extras-dspl/pom.xml
@@ -4,15 +4,12 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>2.1.0</version>
+        <version>2.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>glimpse-extras-dspl</artifactId>
 
     <dependencies>
-
-
-
 
         <dependency>
             <groupId>joda-time</groupId>
