--- a/pom.xml
+++ b/pom.xml
@@ -282,6 +282,26 @@
                                         <execute/>
                                     </action>
                                 </pluginExecution>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>
+                                            org.apache.maven.plugins
+                                        </groupId>
+                                        <artifactId>
+                                            maven-javadoc-plugin
+                                        </artifactId>
+                                        <versionRange>
+                                            [2.9.1,)
+                                        </versionRange>
+                                        <goals>
+                                            <goal>jar</goal>
+                                            <goal>javadoc</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
                             </pluginExecutions>
                         </lifecycleMappingMetadata>
                     </configuration>
